# gameboi

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  README.md  TODO.md  conanfile.txt  main.cpp  sonar-project.properties
.github/workflows/: build.yml
apple/: Info.plist
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  FLAGS.md  RPICrossCompile.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  StaticLink.cmake  version.h.in
debugger/: CMakeLists.txt
debugger/include/debugger/: apu_debugger.h  cartridge_debugger.h  cpu_debugger.h  debugger.h  debugger_util.h  disassembly.h  disassembly_db.h  disassembly_view.h  joypad_debugger.h  link_debugger.h  memory_bank_debugger.h  ppu_debugger.h  timer_debugger.h
debugger/src/: apu_debugger.cpp  cartridge_debugger.cpp  cpu_debugger.cpp  debugger.cpp  disassembly_db.cpp  disassembly_view.cpp  joypad_debugger.cpp  link_debugger.cpp  memory_bank_debugger.cpp  ppu_debugger.cpp  timer_debugger.cpp
frontend/: CMakeLists.txt
frontend/include/: frontend.h  list_view.h  sdl_audio.h  sdl_core.h  sdl_macro.h
frontend/src/: frontend.cpp  main.cpp  sdl_audio.cpp  sdl_core.cpp
gameboy/: CMakeLists.txt
gameboy/cmake/: version.h.in
gameboy/include/gameboy/: bus.h  cartridge.h  gameboy.h  version.h
gameboy/include/gameboy/apu/: apu.h  noise_channel.h  pulse_channel.h  wave_channel.h
gameboy/include/gameboy/apu/data/: channel_control.h  control.h  envelope.h  frequency.h  frequency_control.h  frequency_data.h  polynomial_counter.h  sweep.h  wave_data.h  wave_pattern_duty.h
gameboy/include/gameboy/cpu/: alu.h  cpu.h  instruction_info.h  interrupt.h  register16.h  register8.h
gameboy/include/gameboy/joypad/: joypad.h
gameboy/include/gameboy/link/: link.h
gameboy/include/gameboy/memory/: address.h  address_range.h  addressfwd.h  memory_constants.h  mmu.h
gameboy/include/gameboy/memory/controller/: mbc.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h  mbc_regular.h
gameboy/include/gameboy/ppu/: color.h  dma_transfer_data.h  ppu.h  register_lcdc.h  register_stat.h
gameboy/include/gameboy/ppu/data/: attributes.h  bg.h  bg_attributes.h  interrupt_request.h  obj.h  palette.h
gameboy/include/gameboy/timer/: timer.h
gameboy/include/gameboy/util/: data_loader.h  delegate.h  enum.h  enumutil.h  fileutil.h  log.h  mathutil.h  observer.h  variantutil.h
gameboy/src/: bus.cpp  cartridge.cpp  gameboy.cpp
gameboy/src/apu/: apu.cpp  noise_channel.cpp  pulse_channel.cpp  wave_channel.cpp
gameboy/src/cpu/: alu.cpp  cpu.cpp  register16.cpp  register8.cpp
gameboy/src/joypad/: joypad.cpp
gameboy/src/link/: link.cpp
gameboy/src/memory/: mmu.cpp
gameboy/src/memory/controller/: mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  mbc_regular.cpp
gameboy/src/ppu/: ppu.cpp
gameboy/src/timer/: timer.cpp
gameboy/src/util/: data_loader.cpp  fileutil.cpp
gameboy/test/: CMakeLists.txt
gameboy/test/src/: TestRegister16.cpp  TestRegister8.cpp  math.cpp  test_math.cpp  test_reg16.cpp  test_run_roms.cpp
include/: CartridgeInfo.h  GameBoy.h  Register.h  bus.h  cartridge.h  gameboy.h  int_types.h
include/apu/: apu.h
include/cpu/: ALU.h  CPU.h  Register16.h  Register8.h  alu.h  cpu.h  interrupt.h  register16.h  register8.h
include/joypad/: joypad.h
include/memory/: Address.h  AddressFwd.h  AddressMap.h  AddressRange.h  MMU.h  address.h  address_range.h  addressfwd.h  memory_constants.h  mmu.h
include/memory/controller/: MBC.h  MBC1.h  MBC2.h  MBC3.h  MBC5.h  NullController.h  RumbleController.h  mbc.h  mbc1.h  mbc2.h  mbc3.h  mbc5.h  mbc_null.h  mbc_regular.h
include/ppu/: PPU.h  color.h  dma_transfer_data.h  ppu.h  register_lcdc.h  register_stat.h  sprite.h
include/ppu/data/: bg.h  obj.h  palette.h
include/util/: DataLoader.h  Log.h  Math.h  Observer.h  RomLoader.h  RomParser.h  data_loader.h  delegate.h  enumutil.h  log.h  math.h  mathutil.h  observer.h  overloaded.h  rom_parser.h
scripts/: report_coverage.sh
src/: CMakeLists.txt  GameBoy.cpp  Register.cpp  bus.cpp  cartridge.cpp  gameboy.cpp
src/apu/: apu.cpp
src/cpu/: ALU.cpp  CPU.cpp  Register16.cpp  Register8.cpp  alu.cpp  cpu.cpp  register16.cpp  register8.cpp
src/joypad/: joypad.cpp
src/memory/: Address.cpp  MMU.cpp  mmu.cpp
src/memory/controller/: MBC.cpp  MBC1.cpp  MBC2.cpp  MBC3.cpp  mbc.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp
src/ppu/: PPU.cpp  ppu.cpp
src/util/: DataLoader.cpp  RomLoader.cpp  RomParser.cpp  data_loader.cpp  rom_parser.cpp
test/: CMakeLists.txt  TestHalfRegister.cpp  TestRegister.cpp  TestRegister16.cpp  TestRegister8.cpp  test1.cpp
test/src/: main.cpp  rom_tester_env.cpp  rom_tester_env.h  test_helper.h  test_math.cpp  test_reg16.cpp  test_reg8.cpp  test_run_roms.cpp
